ДЗ 3/K8s/Apps/health-sv.yaml
apiVersion: v1
kind: Service
metadata:
  name: health-service
spec:
  selector:
    app: health
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: ClusterIP
