ДЗ 3/K8s/Apps/health-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: health-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
      - path: api/customers
        pathType: Exact
        backend:
          service:
            name: customer-service-svc
            port: 
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: health-rewrite-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /otusapp/maslov(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: health-service
            port:
              number: 80
